# PROJETOS

./: README.md  cad-mockup.html
admin-dashboard/: README.md  db.json  index.html  package-lock.json  package.json  tsconfig.test.json  vite.config.ts  vitest.config.ts
admin-dashboard/src/: App.tsx  index.css  main.tsx
chat-ui/: README.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.app.tsbuildinfo
chat-ui/src/: App.tsx  index.css
curriculum/: index.html
ecommerce-front/: README.md  index.html  package-lock.json  package.json  vitest.config.ts
ecommerce-front/src/: App.tsx  index.css
observability-kit/: README.md  index.html  package-lock.json  package.json  vite.config.ts
rag-assistant/: .env.example  .gitignore  README.md  docker-compose.yml
rag-assistant/backend/: Dockerfile  alembic.ini  pyproject.toml  requirements.txt
rag-assistant/backend/alembic/: env.py
rag-assistant/backend/alembic/versions/: 001_initial.py
rag-assistant/backend/app/: __init__.py  config.py  database.py  main.py
rag-assistant/backend/app/api/: __init__.py  auth.py  chat.py  deps.py  documents.py  metrics.py
rag-assistant/backend/app/models/: __init__.py  chat_event.py  chunk.py  document.py
rag-assistant/backend/app/schemas/: __init__.py  auth.py  chat.py  document.py  metrics.py
rag-assistant/backend/app/services/: __init__.py  chunker.py  embeddings.py  ingestion.py  llm.py  pdf_processor.py  retrieval.py
rag-assistant/backend/app/utils/: text.py
rag-assistant/backend/tests/: conftest.py  test_abstain.py  test_chunker.py
(+109 files in other folders)
